<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_create_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_button" />

            <Button
                android:id="@+id/btn_create_item_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_switch" />

            <Button
                android:id="@+id/btn_create_item_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_history" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>